[package]
name = "mulder"
version = "0.2.0"
edition = "2021"
license = "LGPL-3.0-only"

[build-dependencies]
cc = "1.2"

[dependencies]
console = "0.15"
enum-variants-strings = "0.3"
indicatif = "0.17"
libc = "0.2"
paste = "1.0"
process_path = "0.1"
regex = "1.11"
temp-dir = "0.1"

pyo3 = { version = "0.25", features = ["abi3", "extension-module"] }

[lib]
name = "mulder"
crate-type = ["lib", "cdylib"]
